set02/problem01error.txt
problem01.c: In function 'find_area':
problem01.c:11:13: error: incompatible types when assigning to type 'float *' from type 'double'
         area=0.5*base*height;
             ^
problem01.c:12:16: warning: 'return' with a value, in function returning void
         return area;
                ^~~~
problem01.c:9:10: note: declared here
     void find_area(float base